jetty version bumped